<resources>
    <string name="app_name">Procesos Administrativos FIA Librerias</string>
    <string name="eliminar">Eliminar</string>
    <string name="ingresarBtn">Ingresar</string>
    <string name="nomasignatura">Nombre Asignatura</string>
    <string name="carnet">Carnet</string>
    <string name="codAsignatura">Codigo Materia</string>
    <string name="GrupoTeorico">GT</string>
    <string name="grupoDiscusion">GD</string>
    <string name="grupoLab">GL</string>
    <string name="tipoEval">Tipo Evaluacion</string>
    <string name="fechaRealizada">Fecha Evaluacion</string>
    <string name="horaRealizada">Hora Evaluacion</string>
    <string name="motivos">Motivo</string>
    <string name="cancelarBtn">Cancelar</string>
    <string name="motivosOtro">Otro</string>
    <string name="evaluacion">Evaluacion</string>
    <string name="codSolicitud">Codigo Solicitud</string>
    <string name="hintCodigo">Codigo</string>
    <string name="buscarBtn">Buscar</string>
    <string name="eliminarBtn">Eliminar</string>
    <string name="modificarBtn">Modificar</string>
    <string-array name="motivos">
        <item>Selecciona un motivo</item>
        <item>Salud</item>
        <item>Trabajo</item>
        <item>Interferencia</item>
        <item>Viaje</item>
        <item>Duelo</item>
        <item>Otro</item>
    </string-array>
    <string-array name="codTipoEval">
        <item>Seleccione el tipo de evaluación</item>
        <item>EP</item>
        <item>ED</item>
        <item>EL</item>
    </string-array>
    <string-array name="tipoDifRep">
        <item>Seleccione tipo</item>
        <item>Diferido</item>
        <item>Repetido</item>
    </string-array>
    <string-array name="estadoSoli">
        <item>Seleccione el estado de solicitud</item>
        <item>Pendiente</item>
        <item>Aprobada</item>
        <item>Denegada</item>
    </string-array>
    <string name="evaluacion_codigo">Codigo Evaluacion</string>
    <string name="fecha">Fecha Evaluacion</string>
    <string name="evaluacion_numero">Numero Evaluacion</string>
    <string name="codasignatura">Codigo Asignatura</string>
    <string name="codtipoeval">Tipo Evaluacion</string>
    <string name="codciclo">Ciclo Lectivo</string>
    <string name="codlocal">Codigo Local</string>
    <string name="nomlocal">Nombre Local</string>
    <string name="ubicacionLocal">Ubicacion Local</string>
    <string name="fechaDesde">Fecha Desde</string>
    <string name="fechaHasta">Fecha Hasta</string>
    <string name="fechaRevision">Fecha Revision</string>
    <string name="horaRevision">Hora Revision</string>
    <string name="codDocente">Codigo Docente</string>
    <string name="codtiporev">Tipo Revision</string>
    <string name="actualizar">Actualizar</string>
    <string name="consultar">Consultar</string>
    <string name="insertar">Insertar</string>
    <string name="limpiar">Limpiar</string>
    <string name="estudianteNombre">Nombre</string>
    <string name="estudianteApellido">Apellido</string>
    <string name="estudianteCarrera">Carrera</string>
    <string name="tipo">Tipo</string>
    <string name="codDetalle">Código detalle</string>
    <string name="fechaInscripcion">Fecha inscripcion</string>
    <string name="estadoSolic">Estado solicitud</string>
    <string name="notaDespRev">Nota Final</string>
    <string name="observaciones">Observaciones</string>
    <string name="moCambioNota">Motivo Cambio Nota</string>
    <string name="nomDocente">Nombre Docente</string>
    <string name="estadoPrimRev">Estado Revisión</string>
    <string name="estadoPendiente">Pendiente</string>
    <string name="estadoTerminada">Terminada</string>
    <string name="asistio">Asistencia</string>
    <string name="asisSi">SI</string>
    <string name="asisNo">NO</string>
    <string name="signout">Cerrar Sesión</string>
    <string name="iniciarSesion">Bienvenido, por favor inicie sesión con una cuenta institucional.</string>
    <string name="justificante">Justificante</string>
    <string name="adjuntarFoto">Adjuntar imagen</string>
    <string name="ubicacion">Ubicación</string>
    <string name="posicion">Posición</string>
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="altitud">Altitud</string>
    <string name="direccion">Dirección</string>
    <string name="exportar"><b>Exportar Tabla</b></string>
    <string name="fechaSolicitud">Fecha Solicitud</string>
    <string name="notaAntesRev">Nota Actual</string>
    <string name="numerogrupo">Numero Grupo</string>
    <string name="motivorev">Motivo Revision</string>

    <string-array name="tipoRevision">
        <item>Seleccione el Tipo de Revisión</item>
        <item>Primer Revisión</item>
        <item>Segunda Revisión</item>
    </string-array>
    <string-array name="codTipoRevision">
        <item>Seleccione el Tipo de Revisión</item>
        <item>PR</item>
        <item>SR</item>
    </string-array>

    <string-array name="tipoEval">
        <item>Seleccione el Tipo de Evaluación</item>
        <item>Examen Parcial</item>
        <item>Examen Discusion</item>
        <item>Examen Laboratorio</item>
    </string-array>

    <string-array name="tipoGrupo">
        <item>Seleccione el Tipo de Grupo</item>
        <item>GT</item>
        <item>GD</item>
        <item>GL</item>
    </string-array>

    <string-array name="estadoPrimRev">
        <item>Seleccione el Estado de la Revisión</item>
        <item>Aprobada</item>
        <item>Reprobada</item>
    </string-array>

    <string-array name="motCambNot">
        <item>Seleccione Motivo de Cambio de Nota</item>
        <item>Error de suma</item>
        <item>Error de elaboracion de preguntas</item>
        <item>Error de calificacion</item>
    </string-array>
    <string-array name="options">
        <item>Seleccionar imagen</item>
        <item>Tomar foto</item>
    </string-array>
    <string-array name="opciones">
        <item>true</item>
        <item>false</item>
    </string-array>
    <string name="ciclo_menu">Función a Ejecutar Ciclo</string>
    <string name="carga_academica_menu">Función a Ejecutar Carga Académica</string>
    <string name="docente_menu">Función a Ejecutar Docente</string>
    <string name="asignatura_menu">Función a Ejecutar Asignatura</string>
    <string name="tipo_docente_menu">Función a Ejecutar Tipo Docente Ciclo</string>
    <string name="insertar_registro">Insertar Registro</string>
    <string name="eliminar_registro">Eliminar Registro</string>
    <string name="actualizar_registro">Actualizar Registro</string>
    <string name="consultar_registro">Consultar Registro</string>
    <string name="fechadesde">Fecha Desde</string>
    <string name="fechahasta">Fecha Hasta</string>
    <string name="idcargaacademica">ID Carga Académica</string>
    <string name="coddocente">ID Docente</string>
    <string name="nombredocente">Nombre Docente</string>
    <string name="apellidodocente">Apellido Docente</string>
    <string name="nombreasignatura">Nombre Asignatura</string>
    <string name="unidadesval">Unidades Valorativas</string>
    <string name="idtipodocenteciclo">ID Tipo Docente Ciclo</string>
    <string name="nomtipodocenteciclo">Nombre Tipo Docente Ciclo</string>
    <string name="opciones">Opciones:</string>
    <string name="LlenarBase">Llenar Base de datos</string>
    <string-array name="opciones">
        <item>true</item>
        <item>false</item>
    </string-array>
    <string name="ok">Aceptar</string>
    <string name="cancelar">Cancelar</string>

    <string name="sol_impresion_menu">Funcion a ejecutar SolicitudImpresion</string>
    <string name="doc_director_menu">Funcion a ejecutar DocenteDirector</string>
    <string name="encar_impresiones_menu">Funcion a ejecutar EncargadoImpresionesr</string>
    <string name="estado_impresion_menu">Funcion a ejecutar EstadoImpresion</string>


    <!---########## SOLICITUD DE IMPRESSION ###########-->
    <string name="idsolicitudimpresion">Idsolicitudimpresion</string>
    <string name="iddocente">Iddocente</string>
    <string name="cantidadexamenes">Cantidadexamenes</string>
    <string name="hojasempaque">Hojasempaque</string>
    <string name="estadoaprobacion">Estadoaprobacion</string>

    <!---########## DOCENTE DIRECTOR ###########-->
    <string name="iddocentedirector">Iddocentedirector</string>
    <string name="idescuela">idEscuela</string>
    <string name="nombredirector">nombreDirector</string>
    <string name="apellidodirector">apellidoDirector</string>
    <string name="correodirector">correoDirector</string>
    <string name="telefonodirector">telefonoDirector</string>

    <!---########## ENCARGADO DE IMPRESIONES ###########-->
    <string name="idencargado">idencargado</string>
    <string name="nombreencargado">nombreencargado</string>
    <string name="apellidoencargado">apellidoencargado</string>

    <!---########## ESTADO DE IMPRESION ###########-->
    <string name="idestadoimpresion">idestadoimpresion</string>
    <string name="idmotivoimpresion">idmotivoimpresion</string>
    <string name="realizado">realizado</string>

    <!-- Errores -->
    <string name="error_campo_obligatorio">Campo Obligatorio</string>
    <string name="error_valor_entre">Error valor entre 1 y 9999</string>

    <string name="validar">Validar</string>
    <string name="title_activity_maps">Map</string>

    <string name="idSegRev">Código Segunda Revisión</string>
    <string name="codtipogrupo">Tipo Grupo</string>

    <string name="ok">Aceptar</string>
    <string name="cancelar">Cancelar</string>

    <string name="sol_impresion_menu">Funcion a ejecutar SolicitudImpresion</string>
    <string name="doc_director_menu">Funcion a ejecutar DocenteDirector</string>
    <string name="encar_impresiones_menu">Funcion a ejecutar EncargadoImpresionesr</string>
    <string name="estado_impresion_menu">Funcion a ejecutar EstadoImpresion</string>


    <!---########## SOLICITUD DE IMPRESSION ###########-->
    <string name="idsolicitudimpresion">Idsolicitudimpresion</string>
    <string name="iddocente">Iddocente</string>
    <string name="cantidadexamenes">Cantidadexamenes</string>
    <string name="hojasempaque">Hojasempaque</string>
    <string name="estadoaprobacion">Estadoaprobacion</string>

    <!---########## DOCENTE DIRECTOR ###########-->
    <string name="iddocentedirector">Iddocentedirector</string>
    <string name="idescuela">idEscuela</string>
    <string name="nombredirector">nombreDirector</string>
    <string name="apellidodirector">apellidoDirector</string>
    <string name="correodirector">correoDirector</string>
    <string name="telefonodirector">telefonoDirector</string>

    <!---########## ENCARGADO DE IMPRESIONES ###########-->
    <string name="idencargado">idencargado</string>
    <string name="nombreencargado">nombreencargado</string>
    <string name="apellidoencargado">apellidoencargado</string>

    <!---########## ESTADO DE IMPRESION ###########-->
    <string name="idestadoimpresion">idestadoimpresion</string>
    <string name="idmotivoimpresion">idmotivoimpresion</string>
    <string name="realizado">realizado</string>

    <!-- Errores -->
    <string name="error_campo_obligatorio">Campo Obligatorio</string>
    <string name="error_valor_entre">Error valor entre 1 y 9999</string>


    <string name="validar">Validar</string>
    <string name="verJustificante">Ver justificante</string>
</resources>