<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1">
    <TableRow>
        <TextView
            android:text="@string/codasignatura"/>
        <EditText
            android:id="@+id/editCodasignatura"
            android:inputType="text"
            android:maxLength="6"/>
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/nombreasignatura"/>
        <EditText
            android:id="@+id/editNombreasignatura"
            android:inputType="text"
            android:maxLength="50"/>
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/unidadesval"/>
        <EditText
            android:id="@+id/editUnidadesval"
            android:inputType="number"
            android:maxLength="1"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/opciones"/>
    </TableRow>
    <TableRow>
        <Button
            android:onClick="insertarAsignatura"
            android:text="@string/insertar"/>
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar"/>
    </TableRow>
</TableLayout>