<?xml version="1.0" encoding="utf-8"?>

<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1">
    <TableRow>
        <TextView
            android:text="@string/idcargaacademica"/>
        <EditText
            android:id="@+id/editIdcargaacademica"
            android:inputType="text"
            android:gravity="center_horizontal"
            android:maxLength="5"/>
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/codciclo"/>
        <EditText
            android:id="@+id/editCodciclo"
            android:inputType="text"
            android:gravity="center_horizontal"
            android:maxLength="5"/>
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/coddocente"/>
        <EditText
            android:id="@+id/editCoddocente"
            android:inputType="text"
            android:gravity="center_horizontal"
            android:maxLength="5"/>
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/codasignatura"/>
        <EditText
            android:id="@+id/editCodasignatura"
            android:inputType="text"
            android:gravity="center_horizontal"
            android:maxLength="6"/>
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/idtipodocenteciclo"/>
        <EditText
            android:id="@+id/editIdtipodocenteciclo"
            android:inputType="text"
            android:gravity="center_horizontal"
            android:maxLength="6"/>
    </TableRow>
    <TableRow>
        <Button
            android:onClick="actualizarCargaacademica"
            android:text="@string/actualizar"/>
    </TableRow>
    <TableRow>
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar"/>
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/btnText2SpeechPlay"
            android:text="@string/escuchar"/>
    </TableRow>
</TableLayout>
