<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1">
    <TableRow>

        <TextView
            android:layout_weight="1"
            android:text="@string/idcargaacademica" />

        <EditText
            android:id="@+id/editIdcargaacademica"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:inputType="text"
            android:maxLength="5" />
    </TableRow>
    <TableRow>

        <TextView
            android:layout_weight="1"
            android:text="@string/codciclo" />

        <EditText
            android:id="@+id/editCodciclo"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:inputType="text"
            android:maxLength="5" />
    </TableRow>
    <TableRow>

        <TextView
            android:layout_weight="1"
            android:text="@string/coddocente" />

        <EditText
            android:id="@+id/editCoddocente"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>
    <TableRow>

        <TextView
            android:layout_weight="1"
            android:text="@string/codasignatura" />

        <EditText
            android:id="@+id/editCodasignatura"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:inputType="text"
            android:maxLength="6" />
    </TableRow>
    <TableRow>

        <TextView
            android:layout_weight="1"
            android:text="@string/idtipodocenteciclo" />

        <EditText
            android:id="@+id/editIdtipodocenteciclo"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:inputType="text"
            android:maxLength="5" />
    </TableRow>
    <TableRow>

        <TextView
            android:layout_weight="1"
            android:text="@string/opciones" />
    </TableRow>
    <TableRow>

        <Button
            android:layout_weight="1"
            android:onClick="insertarCargaacademica"
            android:text="@string/insertar" />

        <Button
            android:layout_weight="1"
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
        <Button
            android:id="@+id/btnText2SpeechPlay"
            android:text="@string/escuchar"/>
    </TableRow>
</TableLayout>