<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1">
    <TableRow>
        <TextView
            android:text="@string/codciclo"/>
        <EditText
            android:id="@+id/editCodciclo"
            android:inputType="text"
            android:gravity="center_horizontal"
            android:maxLength="5"/>
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/fechadesde"/>
        <EditText
            android:id="@+id/editFechadesde"
            android:inputType="text"
            android:gravity="center_horizontal"
            android:maxLength="30"/>
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/fechahasta"/>
        <EditText
            android:id="@+id/editFechahasta"
            android:inputType="text"
            android:gravity="center_horizontal"
            android:maxLength="30"/>
    </TableRow>
    <TableRow>
        <Button
            android:onClick="actualizarCiclo"
            android:text="@string/actualizar"/>
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar"/>
    </TableRow>
</TableLayout>