<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >

    <TableRow>
        <TextView
            android:text="@string/codlocal" />
        <EditText
            android:id="@+id/editCodlocal"
            android:inputType="text"
            android:maxLength="10" />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/nomlocal" />
        <EditText
            android:id="@+id/editNomlocal"
            android:inputType="text"
            android:maxLength="50" />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/ubicacionLocal" />
        <EditText
            android:id="@+id/editUbicacionlocal"
            android:inputType="text"
            android:maxLength="50" />
    </TableRow>

    <TableRow>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="actualizarLocal"
            android:text="@string/actualizar" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>

</TableLayout>