<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dip"
        android:stretchColumns="1">

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estadoPrimRev"/>

            <RadioGroup
                android:id="@+id/opciones_estado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_Terminada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/estadoTerminada" />

                <RadioButton
                    android:id="@+id/radio_Pendiente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:checked="false"
                    android:text="@string/estadoPendiente" />
            </RadioGroup>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/codasignatura" />

            <EditText
                android:id="@+id/editCodasignatura"
                android:layout_weight="1"
                android:inputType="text"
                android:maxLength="6" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/codtipogrupo"/>

            <Spinner
                android:id="@+id/spinTipoGrupo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/tipoGrupo"
                android:gravity="center_horizontal"
                android:textAlignment="center" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/codciclo" />

            <EditText
                android:id="@+id/editCodciclo"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLength="5" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/codtipoeval"/>

            <Spinner
                android:id="@+id/spinTipoEval"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/tipoEval"
                android:gravity="center_horizontal"
                android:textAlignment="center" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/evaluacion_numero" />

            <EditText
                android:id="@+id/editNumeval"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLength="1" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/codDocente" />

            <EditText
                android:id="@+id/editCoddocente"
                android:layout_weight="1"
                android:inputType="text"
                android:maxLength="10" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/carnet" />

            <EditText
                android:id="@+id/editCarnet"
                android:layout_weight="1"
                android:inputType="text"
                android:maxLength="7" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asistio"/>

            <RadioGroup
                android:id="@+id/opciones_asistencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_Si"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:checked="true"
                    android:text="@string/asisSi" />

                <RadioButton
                    android:id="@+id/radio_No"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/asisNo" />
            </RadioGroup>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/notaDespRev" />

            <EditText
                android:id="@+id/editNotaDespues"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:maxLength="4" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moCambioNota"/>

            <Spinner
                android:id="@+id/spinMotCambioNota"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/motCambNot"
                android:gravity="center_horizontal"
                android:textAlignment="center" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/observaciones" />

            <EditText
                android:id="@+id/editObservaciones"
                android:layout_width="230dp"
                android:layout_weight="1"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:lines="5"
                android:maxLength="200"
                android:scrollbars="vertical"
                android:scrollHorizontally="false"
                android:singleLine="false" />
        </TableRow>

        <TableRow>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="actualizarPrimeraRevision"
                android:text="@string/actualizar" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="limpiarTexto"
                android:text="Limpiar" />
        </TableRow>

    </TableLayout>
</ScrollView>